# aicompass

./: README.md  index.html  package.json  vite.config.ts
backend/: .env  pyproject.toml
backend/app/: .env.example  dev.py  main.py  package.json  prod.py  tsconfig.json
backend/app/db/: models.py  mongodb.py
backend/app/routes/: __init__.py  assessments.py  auth.py  users.py
backend/app/schemas/: assessments.py  auth.py  users.py
backend/app/security/: __init__.py  dependencies.py  passwords.py  tokens.py
backend/app/src/: db.ts  types.ts
backend/app/utils/: cors.py  tokens.py
backend/src/: auth.ts  env.ts  index.ts
frontend/: .env  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/data/: benchmark.ts  industries.ts  questions.ts
frontend/src/lib/: api.ts
frontend/src/routes/: Assessment.tsx  Auth.tsx  Company.tsx  Dashboard.tsx  Home.tsx  Invite.tsx  Modules.tsx  Qualify.tsx  Results.tsx
frontend/src/state/: assessmentStore.tsx  authStore.tsx
frontend/src/utils/: scoring.ts
src/: App.tsx  index.css
src/components/: Layout.tsx
src/data/: benchmark.ts
src/routes/: Assessment.tsx  BenchmarkEditor.tsx  Home.tsx  Questions.tsx  Results.tsx
src/state/: assessmentStore.tsx  benchmarkStore.tsx
